--- a/styles/place.css
+++ b/styles/place.css
@@ -7,7 +7,7 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: var(--background-color);
