--- a/styles/place.css
+++ b/styles/place.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@300;600&display=swap');
+
 :root {
     --primary-color: #064366; 
     --secondary-color: #c7dfff; 
@@ -53,7 +55,7 @@
   }
   
   #weather h2::after {
-    content: ' ⛅'; /* Decorative pseudo-element for weather icon */
+    content: ' ⛅'; 
     margin-left: 0.5rem;
     font-size: 1.5rem;
   }
@@ -71,7 +73,7 @@
     padding: 0.5rem;
   }
   
-  /* Mobile View - Default */
+  /* Mobile View*/
   @media (max-width: 599px) {
     main {
       display: flex;
