--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,24 +1,31 @@
 @media (min-width: 768px) {
-    main {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-    }
-  
-    figure {
-      margin: 0;
-    }
-  
-    img {
-      width: 100%;
-      height: auto;
-      border: 2px solid var(--border-color);
-      border-radius: 8px;
-    }
-  
-    nav {
-      justify-content: flex-start;
-      gap: 2rem;
-    }
+  main {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
   }
-  
+
+  figure {
+    margin: 0;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    border: 2px solid var(--border-color);
+    border-radius: 8px;
+  }
+
+  nav {
+    justify-content: flex-start;
+    gap: 2rem;
+  }
+
+  .hamburger-button {
+    display: none; /* Hamburger hidden in larger viewports */
+  }
+
+  nav {
+    display: flex; /* Always visible in larger viewports */
+  }
+}
