--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,5 +1,10 @@
 @media (min-width: 768px) {
-  main {
+  h2 {
+    text-align: center;
+    margin: 20px 0;
+  }
+
+  .templeimages {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
@@ -12,20 +17,9 @@
   img {
     width: 100%;
     height: auto;
+    display: block;
+    object-fit: cover;
     border: 2px solid var(--border-color);
-    border-radius: 8px;
-  }
-
-  nav {
-    justify-content: flex-start;
-    gap: 2rem;
-  }
-
-  .hamburger-button {
-    display: none; /* Hamburger hidden in larger viewports */
-  }
-
-  nav {
-    display: flex; /* Always visible in larger viewports */
+    border-radius: 15px;
   }
 }
