--- a/styles/form.css
+++ b/styles/form.css
@@ -10,7 +10,7 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 2px;
     background-color: var(--bg-color);
